ready private coment
